force-app/main/default/objects/ProjetoTask__c/ProjetoTask__c.object-meta.xml
<CustomObject>
    <description>Projeto para entrega de task.</description>
    <label>ProjetoTask</label>
    <nameField>
        <label>Nome de Projeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjetosTask</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>