force-app/main/default/objects/ProjetoTask__c/fields/Data_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Data_Entrega__c</fullName>
    <description>Data de entrega do projeto.</description>
    <inlineHelpText>Data de entrega do projeto.</inlineHelpText>
    <label>Data_Entrega</label>
    <type>Date</type>
</CustomField>