force-app/main/default/objects/ProjetoTask__c/fields/Data_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicio__c</fullName>
    <description>Data de Inicio do projeto.</description>
    <inlineHelpText>Data de Inicio do projeto.</inlineHelpText>
    <label>Data_Inicio</label>
    <type>Date</type>
</CustomField>