force-app/main/default/objects/ProjetoTask__c/fields/Porcentagem_Projeto__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem_Projeto__c</fullName>
    <description>Porcentagem do Projeto.</description>
    <inlineHelpText>Porcentagem do Projeto.</inlineHelpText>
    <label>Porcentagem_Projeto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>