force-app/main/default/objects/ProjetoTask__c/validationRules/ERRO_01_NomeMinTresLetras.validationRule-meta.xml
<ValidationRule>
    <fullName>ERRO_01_NomeMinTresLetras</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name)&lt; 3</errorConditionFormula>
    <errorMessage>ERRO_01_O nome do projeto deve conter no minimo tres caracteres.</errorMessage>
</ValidationRule>