force-app/main/default/objects/ProjetoTask__c/validationRules/ERRO_02_CustoNegativo.validationRule-meta.xml
<ValidationRule>
    <fullName>ERRO_02_CustoNegativo</fullName>
    <active>true</active>
    <description>O custo nao deve ser negativo.</description>
    <errorConditionFormula>Custo__c  &lt; 0</errorConditionFormula>
    <errorMessage>ERRO_02_O campo Custo não deve ser Negativo.</errorMessage>
</ValidationRule>