force-app/main/default/objects/ProjetoTask__c/validationRules/ERRO_03_PorcentagemMenorZeroOuMaiorCem.validationRule-meta.xml
<ValidationRule>
    <fullName>ERRO_03_PorcentagemMenorZeroOuMaiorCem</fullName>
    <active>true</active>
    <description>A porcentagem informada deve ser entre 0 e 100 por cento.</description>
    <errorConditionFormula>Porcentagem_Projeto__c  &lt;0 ||  Porcentagem_Projeto__c&gt;1.0</errorConditionFormula>
    <errorMessage>ERRO_03_ A porcentagem informada deve ser maior que 0 e menor que 100.</errorMessage>
</ValidationRule>