force-app/main/default/objects/ProjetoTask__c/validationRules/ERRO_05_DataMinEntrega.validationRule-meta.xml
<ValidationRule>
    <fullName>ERRO_05_DataMinEntrega</fullName>
    <active>true</active>
    <description>A data de entrega  deverá ser no mínimo de 45 dias após a data de início do projeto.</description>
    <errorConditionFormula>Data_Entrega__c &lt; Data_Inicio__c + 45</errorConditionFormula>
    <errorMessage>ERRO_05_A data de entrega  deverá ser no mínimo de 45 dias após a data de início do projeto.</errorMessage>
</ValidationRule>